complete premake file, write shader compile batch file, try render cube instances but not complete

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ VulkanDemo.sln
 *.filters
 *.user
 gpuCull/imgui.ini
+data/models/
+data/shaders/glsl/
+data/textures/
+*.spv
+data/Roboto-Medium.ttf
+data/font.fnt
+data/README.md
+data/Robot-Medium-license.txt
