--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 .vs/
 premake5.exe
 bin/
-intermediate/
+bin-intermediate/
 VulkanDemo.sln
 *.vcxproj
 *.filters
 *.user
-gpuCull/imgui.ini
 data/models/
 data/shaders/glsl/
 data/Roboto-Medium.ttf
@@ -17,15 +16,13 @@ data/shaders/gpuCull/*.spv
 data/shaders/gpuCluster/cluster.comp.spv
 data/shaders/gpuCluster/scene.frag.spv
 data/shaders/gpuCluster/scene.vert.spv
-gpuCluster/imgui.ini
 data/shaders/sponza/geometry.frag
 data/shaders/sponza/geometry.vert
 data/shaders/sponza/scene.frag.spv
 data/shaders/sponza/scene.vert.spv
 data/shaders/textureDDS/textureDDS.frag.spv
 data/shaders/textureDDS/textureDDS.vert.spv
-sponza/imgui.ini
-textureDDS/imgui.ini
 *.ktx
 data/shaders/ArrayOfDescriptor/ArrayOfDescriptor.frag.spv
 data/shaders/ArrayOfDescriptor/ArrayOfDescriptor.vert.spv
+*.ini
